--- a/src/styles/journeys.scss
+++ b/src/styles/journeys.scss
@@ -80,6 +80,7 @@ header {
   justify-content: flex-end;
   min-height: 60px;
   max-height: 90px;
+  border-bottom: 1px solid rgba(black, 0.05);
 
   .logo {
     max-height: 70%;
@@ -160,4 +161,29 @@ main {
       background-color: lighten($primary, 20%);
     }
   }
+}
+
+.blurred {
+  filter: blur(5px);
+}
+
+
+
+.zoom-enter {
+  opacity: 0.01;
+  transform: scale(0.8);
+}
+.zoom-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.zoom-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+.zoom-exit-active {
+  opacity: 0.01;
+  transform: scale(0.8);
+  transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
