Added follow-up support
- broke out API url to .env
- added .env to gitignore
- restructured get question, get answers, submit answer, and finish exam to support follow-up
- added handling of dynamic media and SBAR question content
- added some little animations here and there for flair
- added Journeys logo
- got rid of primary Apex Innovations logo in top right
- other minor bug fixes

--- a/src/styles/buttons.scss
+++ b/src/styles/buttons.scss
@@ -7,13 +7,41 @@ button, .btn {
 	border: $border;
 	padding: $padding-sm $padding-md;
 	font-size: 1.15em;
-	border-radius: 6px;
+	border-radius: 4px;
 	color: white;
 	font-weight: bold;
 	cursor: pointer;
 
 	&:disabled, &.disabled {
 		opacity: 0.5;
+	}
+
+	&:focus {
+		outline: none;
+	}
+
+	&.flat {
+		background-color: transparent !important;
+		border: none;
+		color: #aaa;
+
+	&.primary {
+		color: $primary;
+	}
+
+	&.translucent-light {
+		color: $translucent-light;
+	}
+	&.translucent {
+		color: $translucent;
+	}
+	&.translucent-dark {
+		color: $translucent-dark;
+	}
+
+	&.selected {
+		color: $primary;
+	}
 	}
 
 	&.primary {
