--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,10 +1,19 @@
-$primary: #2a7bf5;
+$journeysPrimaryColor: #0f547a;
+$primary: lighten($journeysPrimaryColor, 15%);
 $red: #d20000;
 $green: #3fa82a;
 
 $translucent-light: rgba(white, 0.9);
 $translucent: rgba(grey, 0.9);
 $translucent-dark: rgba(black, 0.9);
+
+.primary-text {
+	color: $primary;
+}
+
+.secondary-text {
+	color: #555;
+}
 
 .white-text {
 	color: white;
