--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    sans-serif !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -25,6 +25,19 @@ a {
   text-decoration: none;
 }
 
+.clickable {
+  cursor: pointer;
+}
+
+.valign-container {
+  display: flex;
+  align-items: center;
+}
+
+.flexed {
+  display: flex;
+  justify-content: space-between;
+}
 
 .left-align {
   text-align: left;
