--- a/src/styles/journeys.scss
+++ b/src/styles/journeys.scss
@@ -5,7 +5,7 @@
 
 @media all and (min-width: 1280px) {
   .container {
-    grid-template-rows: 5fr 53fr 15fr;
+    grid-template-rows: 100px 53fr 8fr;
     grid-template-columns: 64px auto;
     grid-template-areas:
       "header header"
@@ -16,7 +16,7 @@
 
 @media all and (max-width: 1280px) {
   .container {
-    grid-template-rows: 5fr 53fr 15fr;
+    grid-template-rows: 100px 53fr 8fr;
     grid-template-columns: 64px auto;
     grid-template-areas:
       "header header"
@@ -27,7 +27,7 @@
 
 @media all and (max-width: 980px) {
   .container {
-    grid-template-rows: 5fr 53fr 15fr;
+    grid-template-rows: 100px 53fr 8fr;
     grid-template-columns: 64px auto;
     grid-template-areas:
       "header header"
@@ -40,7 +40,7 @@
 
 @media all and (max-width: 736px) {
   .container {
-    grid-template-rows: 5fr 53fr 15fr;
+    grid-template-rows: 100px 53fr 8fr;
     grid-template-columns: 64px auto;
     grid-template-areas:
       "header header header"
@@ -52,7 +52,7 @@
 @media all and (max-width: 480px) {
 
   .container {
-    grid-template-rows: 5fr 53fr 15fr;
+    grid-template-rows: 100px 53fr 8fr;
     grid-template-columns: 64px auto;
     grid-template-areas:
       "header header header"
@@ -66,7 +66,7 @@
   display: grid;
   background: #eee;
   user-select: none;
-  height: 100%;
+  min-height: 100%;
   min-width: 600px;
   padding-left: 64px;
 }
@@ -83,14 +83,14 @@ header {
   border-bottom: 1px solid rgba(black, 0.05);
 
   .logo {
-    max-height: 70%;
-    float: right;
+    max-height: 75%;
   }
 }
 
 nav {
-  grid-area: nav;
-  position: fixed !important;
+	background-color: $journeysPrimaryColor !important;
+	grid-area: nav;
+	position: fixed !important;
 }
 
 main {
@@ -98,7 +98,7 @@ main {
 }
 
 .card {
-  padding: 0 $padding-lg;
+  padding: $padding-md;
   background-color: white;
   border: $border;
   box-shadow: $shadow;
@@ -109,14 +109,15 @@ main {
   font-size: 0.8em;
 }
 
-.loader {
-  position: relative;
+.content-overlay {
+  position: absolute;
+  width: 100%;
+  top: 0;
   cursor: default;
   z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
   padding: $padding-lg;
   height: 100%;
   box-sizing: border-box;
@@ -127,25 +128,30 @@ main {
   list-style-position: inside;
 
   li {
-    margin: $margin-md 0;
-    padding: 0.5em;
-    background-color: white;
-    border: $border;
-    box-shadow: $shadow;
-    border-radius: 6px;
     cursor: pointer;
-    list-style-type: none;
+	 list-style-type: none;
     font-weight: bold;
-    font-size: 1.2em;
+	 font-size: 1.2em;
+	 display: flex;
+	 align-items: center;
+	 
+	 * {
+		 font-family: inherit !important;
+		 font-size: inherit !important;
+	 }
 
     &:before {
       content: "\25CB";
-      padding: 0 $padding-sm;
+      padding: 0 $padding-md;
     }
 
     &.selected {
-      background-color: $primary;
-      color: white;
+		background-color: $primary;
+		color: white;
+		
+		* {
+			color: white !important;
+		}
 
       &:before {
         content: "\25C9";
@@ -171,7 +177,7 @@ main {
 
 .zoom-enter {
   opacity: 0.01;
-  transform: scale(0.8);
+  transform: scale(0.5);
 }
 .zoom-enter-active {
   opacity: 1;
@@ -184,6 +190,21 @@ main {
 }
 .zoom-exit-active {
   opacity: 0.01;
-  transform: scale(0.8);
-  transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  transform: scale(0.5);
+  transition: all 300ms ease-out;
+}
+
+.fade-enter {
+  opacity: 0.01;
+}
+.fade-enter-active {
+  opacity: 1;
+  transition: all 300ms ease-out;
+}
+.fade-exit {
+  opacity: 1;
+}
+.fade-exit-active {
+  opacity: 0.01;
+  transition: all 300ms ease-out;
 }
