--- a/src/styles/padding.scss
+++ b/src/styles/padding.scss
@@ -2,6 +2,18 @@ $padding-sm: 0.4em;
 $padding-md: 0.7em;
 $padding-lg: 1em;
 
+.padding-sm {
+	padding: $padding-sm;
+}
+
+.padding-md {
+	padding: $padding-md;
+}
+
+.padding-lg {
+	padding: $padding-lg;
+}
+
 .padding-left,
 .padding-left-sm {
 	padding-left: $padding-sm;
@@ -29,7 +41,7 @@ $padding-lg: 1em;
 }
 
 .padding-top,
-.padding-left-sm {
+.padding-top-sm {
 	padding-top: $padding-sm;
 }
 
