--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -7,10 +7,11 @@
 	position: relative;
 	display: block;
 	width: 100%;
-	max-height: 700px;
-	height: 70%;
+	max-height: 560px;
+	// height: 560px;
 	overflow: hidden;
 	border-radius: 6px;
+	margin: 0 auto;
 
 	.overlay {
 		position: absolute;
@@ -31,6 +32,7 @@
 			.avatar {
 				display: flex;
 				align-items: center;
+				cursor: pointer;
 				justify-content: center;
 				overflow: hidden;
 				border-radius: 50%;
@@ -50,27 +52,36 @@
 				padding: $padding-lg 30px $padding-lg $padding-lg;
 				background-color: white;
 				margin: $margin-lg $margin-md $margin-md $margin-sm;
-				max-width: 500px;
+				max-width: 700px;
+				max-height: 300px;
+				pointer-events: all;
 				position: relative;
 				border-radius: 8px;
 				font-weight: bold;
 				color: #333;
 				box-sizing: border-box;
 				box-shadow: $shadow;
+				
+				.content {
+					height: 100%;
+					width: 100%;
+					overflow-y: auto;
+					padding-right: $padding-lg;
+				}
 
 
 				/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&1+0,0.9+100;White+to+Transparent */
-				background: -moz-linear-gradient(-45deg, rgba(white, 1) 0%, rgba(white, 0.9) 10%);
+				background: -moz-linear-gradient(-45deg, rgba(white, 1) 0%, rgba(white, 0.9) 30%);
 				/* FF3.6-15 */
-				background: -webkit-linear-gradient(-45deg, rgba(white, 1) 0%, rgba(white, 0.9) 10%);
+				background: -webkit-linear-gradient(-45deg, rgba(white, 1) 0%, rgba(white, 0.9) 30%);
 				/* Chrome10-25,Safari5.1-6 */
-				background: linear-gradient(135deg, rgba(white, 1) 0%, rgba(white, 0.9) 20%);
+				background: linear-gradient(135deg, rgba(white, 1) 0%, rgba(white, 0.9) 30%);
 				/* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 				filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6ffffff', GradientType=1);
 				/* IE6-9 fallback on horizontal gradient */
 
 				will-change: transform, opacity;
-				transition: all 300ms cubic-bezier(0.28, 0.735, 0.25, 1.2);
+				transition: all 400ms cubic-bezier(0.28, 0.735, 0.25, 1.2);
 				transform-origin: top left;
 
 				&:before {
@@ -88,8 +99,12 @@
 					transform: scale(0);
 					opacity: 0;
 
-					transition: all 300ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
+					transition: all 400ms cubic-bezier(0.6, -0.28, 0.735, 0.045);
 
+				}
+
+				h3 {
+					margin-top: 0;
 				}
 
 				.closeButton {
@@ -115,10 +130,117 @@
 		}
 	}
 
-	img {
+	video, img {
 		width: 100%;
 		height: 100%;
-		object-fit: cover;
+		object-fit: contain;
 		object-position: center;
 	}
+}
+
+.media-enter {
+	max-height: 560px;
+}
+.media-enter-active {
+	max-height: 300px;
+	transition: all 400ms cubic-bezier(0, 0.685, 0.32, 1.16);
+}
+.media-exit {
+	max-height: 300px;
+}
+.media-exit-active {
+	max-height: 560px;
+	transition: all 400ms cubic-bezier(0, 0.685, 0.32, 1.16);
+}
+.media-enter-done {
+	max-height: 300px;
+}
+
+
+
+.question {
+	overflow: hidden;
+	height: auto;
+	text-overflow: ellipsis;
+	font-size: 1.1em;
+	
+	h3 {
+		margin: 0;
+	}
+
+	div {
+		line-height: 1.6em;
+		white-space: pre-wrap;
+	}
+
+	span, p {
+		
+		font-family: inherit !important;
+		font-size: inherit !important;
+	}
+
+	font {
+		font-family: inherit !important;
+		font-size: inherit !important;
+	}
+}
+.question-enter {
+	max-height: auto;
+}
+.question-enter-active {
+	max-height: 600px;
+	transition: all 400ms cubic-bezier(0, 0.885, 0.32, 1.06);
+}
+.question-exit {
+	max-height: 600px;
+}
+.question-exit-active {
+	max-height: auto;
+  	transition: all 400ms cubic-bezier(0, 0.885, 0.32, 1.06);
+}
+.question-enter-done {
+	max-height: 600px;
+}
+
+.followUp {
+	.card {
+		max-width: 700px;
+		max-height: 700px;
+		overflow-y: auto;
+
+		div {
+			font-size: 1.3em;
+		}
+			* {
+				margin: 0;
+			}
+		
+			* + * {
+				margin-top: 1em;
+			}
+		
+	}
+}
+
+.followUp-enter {
+	opacity: 0;
+	transform: scale(0.8);
+}
+.followUp-enter-active {
+	opacity: 1;
+	transform: scale(1);
+	transition: all 400ms cubic-bezier(0.175, 0.885, 0.32, 1.0)
+}
+.followUp-exit {
+	opacity: 1;
+	transform: scale(1);
+}
+.followUp-exit-active {
+	opacity: 0;
+	transform: scale(0.8);
+  	transition: all 400ms cubic-bezier(0.175, 0.885, 0.32, 1.0)
+}
+.followUp-enter-done {
+	opacity: 1;
+	transform: scale(1);
 }
