--- a/src/styles/journeys.scss
+++ b/src/styles/journeys.scss
@@ -3,71 +3,13 @@
 @import "./padding.scss";
 @import "./buttons.scss";
 
-@media all and (min-width: 1280px) {
-  .container {
-    grid-template-rows: 100px 53fr 8fr;
-    grid-template-columns: 64px auto;
-    grid-template-areas:
-      "header header"
-      "main main"
-      "footer footer";
-  }
-}
-
-@media all and (max-width: 1280px) {
-  .container {
-    grid-template-rows: 100px 53fr 8fr;
-    grid-template-columns: 64px auto;
-    grid-template-areas:
-      "header header"
-      "main main"
-      "footer footer";
-  }
-}
-
-@media all and (max-width: 980px) {
-  .container {
-    grid-template-rows: 100px 53fr 8fr;
-    grid-template-columns: 64px auto;
-    grid-template-areas:
-      "header header"
-      "main main"
-      "footer footer";
-
-
-  }
-}
-
-@media all and (max-width: 736px) {
-  .container {
-    grid-template-rows: 100px 53fr 8fr;
-    grid-template-columns: 64px auto;
-    grid-template-areas:
-      "header header header"
-      "main main"
-      "footer footer footer";
-  }
-}
-
-@media all and (max-width: 480px) {
-
-  .container {
-    grid-template-rows: 100px 53fr 8fr;
-    grid-template-columns: 64px auto;
-    grid-template-areas:
-      "header header header"
-      "main main"
-      "footer footer footer";
-  }
-}
-
 .container {
   position: relative;
   display: grid;
   background: #eee;
   user-select: none;
   min-height: 100%;
-  min-width: 600px;
+//   min-width: 600px;
   padding-left: 64px;
 }
 
@@ -79,7 +21,7 @@ header {
   align-items: center;
   justify-content: flex-end;
   min-height: 60px;
-  max-height: 90px;
+  max-height: 80px;
   border-bottom: 1px solid rgba(black, 0.05);
 
   .logo {
@@ -95,6 +37,12 @@ nav {
 
 main {
   grid-area: main;
+
+  .question-container {
+	 margin: 0 auto;
+	 max-width: 1000px;
+	 padding: 1em
+  }
 }
 
 .card {
@@ -123,51 +71,6 @@ main {
   box-sizing: border-box;
 }
 
-
-.answerSelections {
-  list-style-position: inside;
-
-  li {
-    cursor: pointer;
-	 list-style-type: none;
-    font-weight: bold;
-	 font-size: 1.2em;
-	 display: flex;
-	 align-items: center;
-	 
-	 * {
-		 font-family: inherit !important;
-		 font-size: inherit !important;
-	 }
-
-    &:before {
-      content: "\25CB";
-      padding: 0 $padding-md;
-    }
-
-    &.selected {
-		background-color: $primary;
-		color: white;
-		
-		* {
-			color: white !important;
-		}
-
-      &:before {
-        content: "\25C9";
-        color: white;
-      }
-    }
-
-    &:not(.selected):hover {
-      background-color: lighten($primary, 40%);
-    }
-
-    &:not(.selected):active {
-      background-color: lighten($primary, 20%);
-    }
-  }
-}
 
 .blurred {
   filter: blur(5px);
@@ -207,4 +110,101 @@ main {
 .fade-exit-active {
   opacity: 0.01;
   transition: all 300ms ease-out;
+}
+
+
+#mobileSideNavToggle {
+	display: none;
+}
+
+@media all and (min-width: 1280px) {
+  .container {
+    grid-template-rows: 5fr 55fr 8fr;
+    grid-template-columns: 64px auto;
+    grid-template-areas:
+      "header header"
+      "main main"
+      "footer footer";
+  }
+}
+
+@media all and (max-width: 1280px) {
+  .container {
+    grid-template-rows: 6fr 69fr 10fr;
+    grid-template-columns: 64px auto;
+    grid-template-areas:
+      "header header"
+      "main main"
+      "footer footer";
+  }
+}
+
+@media all and (max-width: 980px) {
+  .container {
+    grid-template-rows: 5fr 44fr 8fr;
+    grid-template-columns: 0 auto;
+    grid-template-areas:
+      "header header"
+      "main main"
+		"footer footer";
+  }
+
+  main {
+	  .question-container {
+		  max-width: 700px;
+	  }
+  }
+}
+
+@media all and (max-height: 1000px) {
+	.container {
+		font-size: 0.8em;
+
+		main {
+			.question-container {
+				max-width: 600px;
+			}
+		}
+	}
+}
+
+@media all and (max-width: 736px) {
+	.container {
+		grid-template-rows: 5fr 39fr 8fr;
+		grid-template-columns: 64px auto;
+		grid-template-areas:
+      "header header header"
+      "main main"
+		"footer footer";
+		
+		font-size: 0.7em;
+		padding-left: 0 !important;
+	}
+
+	header {
+		padding: 0 $padding-lg;
+		min-height: 60px;
+	}
+
+	.sidenav---collapsed---LQDEv {
+		min-width: 0;
+		width: 0;
+		overflow: hidden;
+	}
+
+	#mobileSideNavToggle {
+		// display: inline-block;
+	}
+}
+
+@media all and (max-width: 480px) {
+
+  .container {
+    grid-template-rows: 4fr 38fr 8fr;
+    grid-template-columns: 64px auto;
+    grid-template-areas:
+      "header header"
+      "main main"
+      "footer footer";
+  }
 }
