--- a/src/styles/journeys.scss
+++ b/src/styles/journeys.scss
@@ -4,31 +4,13 @@
 @import "./buttons.scss";
 
 .container {
-  position: relative;
-  display: grid;
-  background: #eee;
-  user-select: none;
-  min-height: 100%;
-//   min-width: 600px;
-  padding-left: 64px;
-}
-
-header {
-	box-sizing: border-box;
-  grid-area: header;
-  background-color: #dadada;
-  padding: $padding-md $padding-lg;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  min-height: 60px;
-  max-height: 80px;
-  border-bottom: 1px solid rgba(black, 0.05);
-
-  .logo {
-	 max-height: 75%;
-	 object-fit: contain;
-  }
+	position: relative;
+	display: grid;
+	background: #444;
+	user-select: none;
+	min-height: 100%;
+	//   min-width: 600px;
+	padding-left: 64px;
 }
 
 nav {
@@ -38,80 +20,86 @@ nav {
 }
 
 main {
-  grid-area: main;
+	grid-area: main;
 
-  .question-container {
-	 margin: 0 auto;
-	 max-width: 1000px;
-	 padding: 1em
-  }
+	.question-container {
+		margin: 0 auto;
+		max-width: 1000px;
+		padding: 1em
+	}
 }
 
 .card {
-  padding: $padding-md;
-  background-color: white;
-  border: $border;
-  box-shadow: $shadow;
-  border-radius: 6px;
+	padding: $padding-md;
+	background-color: white;
+	border: $border;
+	box-shadow: $shadow;
+	border-radius: 6px;
 }
 
 .small-text {
-  font-size: 0.8em;
+	font-size: 0.8em;
 }
 
 .content-overlay {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  cursor: default;
-  z-index: 1000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: $padding-lg;
-  height: 100%;
-  box-sizing: border-box;
+	position: absolute;
+	width: 100%;
+	top: 0;
+	cursor: default;
+	z-index: 1000;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: $padding-lg;
+	height: 100%;
+	box-sizing: border-box;
 }
 
 
 .blurred {
-  filter: blur(5px);
+	filter: blur(5px);
 }
 
 
 
 .zoom-enter {
-  opacity: 0.01;
-  transform: scale(0.5);
+	opacity: 0.01;
+	transform: scale(0.5);
 }
+
 .zoom-enter-active {
-  opacity: 1;
-  transform: scale(1);
-  transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+	opacity: 1;
+	transform: scale(1);
+	transition: all 300ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
+
 .zoom-exit {
-  opacity: 1;
-  transform: scale(1);
+	opacity: 1;
+	transform: scale(1);
 }
+
 .zoom-exit-active {
-  opacity: 0.01;
-  transform: scale(0.5);
-  transition: all 300ms ease-out;
+	opacity: 0.01;
+	transform: scale(0.5);
+	transition: all 300ms ease-out;
 }
 
 .fade-enter {
-  opacity: 0.01;
+	opacity: 0.01;
 }
+
 .fade-enter-active {
-  opacity: 1;
-  transition: all 300ms ease-out;
+	opacity: 1;
+	transition: all 300ms ease-out;
 }
+
 .fade-exit {
-  opacity: 1;
+	opacity: 1;
 }
+
 .fade-exit-active {
-  opacity: 0.01;
-  transition: all 300ms ease-out;
+	opacity: 0.01;
+	transition: all 300ms ease-out;
 }
 
 
@@ -120,42 +108,42 @@ main {
 }
 
 @media all and (min-width: 1280px) {
-  .container {
-    grid-template-rows: 3.8fr 55fr 8fr;
-    grid-template-columns: 64px auto;
-    grid-template-areas:
-      "header header"
-      "main main"
-      "footer footer";
-  }
+	.container {
+		grid-template-rows: 3.8fr 55fr 8fr;
+		grid-template-columns: 64px auto;
+		grid-template-areas:
+			"header header"
+			"main main"
+			"footer footer";
+	}
 }
 
 @media all and (max-width: 1280px) {
-  .container {
-    grid-template-rows: 4.8fr 69fr 10fr;
-    grid-template-columns: 64px auto;
-    grid-template-areas:
-      "header header"
-      "main main"
-      "footer footer";
-  }
+	.container {
+		grid-template-rows: 4.8fr 69fr 10fr;
+		grid-template-columns: 64px auto;
+		grid-template-areas:
+			"header header"
+			"main main"
+			"footer footer";
+	}
 }
 
 @media all and (max-width: 980px) {
-  .container {
-    grid-template-rows: 3.8fr 44fr 8fr;
-    grid-template-columns: 0 auto;
-    grid-template-areas:
-      "header header"
-      "main main"
-		"footer footer";
-  }
+	.container {
+		grid-template-rows: 3.8fr 44fr 8fr;
+		grid-template-columns: 0 auto;
+		grid-template-areas:
+			"header header"
+			"main main"
+			"footer footer";
+	}
 
-  main {
-	  .question-container {
-		  max-width: 700px;
-	  }
-  }
+	main {
+		.question-container {
+			max-width: 700px;
+		}
+	}
 }
 
 @media all and (max-height: 1000px) {
@@ -175,10 +163,10 @@ main {
 		grid-template-rows: 4.5fr 39fr 8fr;
 		grid-template-columns: 64px auto;
 		grid-template-areas:
-      "header header header"
-      "main main"
-		"footer footer";
-		
+			"header header header"
+			"main main"
+			"footer footer";
+
 		font-size: 0.7em;
 		padding-left: 0 !important;
 	}
@@ -201,12 +189,12 @@ main {
 
 @media all and (max-width: 480px) {
 
-  .container {
-    grid-template-rows: 4fr 38fr 8fr;
-    grid-template-columns: 64px auto;
-    grid-template-areas:
-      "header header"
-      "main main"
-      "footer footer";
-  }
+	.container {
+		grid-template-rows: 4fr 38fr 8fr;
+		grid-template-columns: 64px auto;
+		grid-template-areas:
+			"header header"
+			"main main"
+			"footer footer";
+	}
 }
