--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -20,6 +20,7 @@
 		flex-direction: column;
 		width: 100%;
 		height: 100%;
+		top: 0;
 		background-color: rgba(black, 0.3);
 
 		.currentSection {
