--- a/src/styles/question.scss
+++ b/src/styles/question.scss
@@ -21,22 +21,8 @@
 		width: 100%;
 		height: 100%;
 		top: 0;
-		background-color: rgba(black, 0.3);
-		.progressContainer{
-			position:absolute;
-			width:100%;
-			height:10px;
-			bottom:0;
-			left:0;
-			background:rgba(128, 128, 128, 0.486);
-			.progressFiller{
-				position: inherit;
-				height:inherit;
-				bottom:0;
-				left:0;
-				background:rgba(0, 197, 0, 0.541);
-			}
-		}
+		// background-color: rgba(black, 0.3);
+		
 		.currentSection {
 			display: flex;
 			justify-content: flex-start;
@@ -190,7 +176,6 @@
 	height: auto;
 	text-overflow: ellipsis;
 	font-size: 1.1em;
-
 	h3 {
 		margin: 0;
 	}
@@ -209,6 +194,22 @@
 	font {
 		font-family: inherit !important;
 		font-size: inherit !important;
+	}
+
+	.progressContainer{
+		position:absolute;
+		width:100%;
+		height:10px;
+		bottom:0;
+		left:0;
+		background:rgba(128, 128, 128, 0.486);
+		.progressFiller{
+			position: inherit;
+			height:inherit;
+			bottom:0;
+			left:0;
+			background:rgba(0, 197, 0, 0.541);
+		}
 	}
 }
 
